fix styles(management): alignment

--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -67,8 +67,11 @@
     border-radius: 5px;
     align-items: center;
 
-    .title-container {
+    .table-frame, .title-container{
       width: 75%;
+    }
+
+    .title-container {
       display: flex;
       align-items: center;
       margin-bottom: 24px;
@@ -161,9 +164,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    width: 80%;
     padding-bottom: 1rem;
-    padding-left: 3rem;
   }
 
 // STATUS STYLES
